Show user menu on right-click of the avatar button when MaterialDesignUserMenu is enabled.

BUG=657291

Review-Url: https://codereview.chromium.org/2478523003
Cr-Commit-Position: refs/heads/master@{#430360}

Former-commit-id: 6b24b79eb930b4abb10451a77489528325a8bd63